minor css changes to fix tooltip heading not wrapping.
git-svn-id: svn://svn.code.sf.net/p/opendb/code/opendb/trunk@264 2c52d18a-8f90-4aa0-bf14-52c5ce5e299b

--- a/theme/default/admin.css
+++ b/theme/default/admin.css
@@ -5,11 +5,12 @@
 }
 
 .tooltip { background: rgb(255, 238, 170); color: black; }
-.tooltip { width: 300px; }
+.tooltip { width: 350px; }
 .tooltip th { font-size: 90%; }
 .tooltip dt { font-weight: bold; }
 .tooltip-caption { background: black; color: rgb(255, 238, 170); }
-
+.tooltip h2 { white-space: normal; }
+	
 div.tabContainer
 {
 	padding-top: 10px;
